docs/0.45/kafka/v1beta2/kafkaRebalance.md
---
permalink: /0.45/kafka/v1beta2/kafkaRebalance/
---

# kafka.v1beta2.kafkaRebalance



## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withBrokers(brokers)`](#fn-specwithbrokers)
  * [`fn withBrokersMixin(brokers)`](#fn-specwithbrokersmixin)
  * [`fn withConcurrentIntraBrokerPartitionMovements(concurrentIntraBrokerPartitionMovements)`](#fn-specwithconcurrentintrabrokerpartitionmovements)
  * [`fn withConcurrentLeaderMovements(concurrentLeaderMovements)`](#fn-specwithconcurrentleadermovements)
  * [`fn withConcurrentPartitionMovementsPerBroker(concurrentPartitionMovementsPerBroker)`](#fn-specwithconcurrentpartitionmovementsperbroker)
  * [`fn withExcludedTopics(excludedTopics)`](#fn-specwithexcludedtopics)
  * [`fn withGoals(goals)`](#fn-specwithgoals)
  * [`fn withGoalsMixin(goals)`](#fn-specwithgoalsmixin)
  * [`fn withMode(mode)`](#fn-specwithmode)
  * [`fn withMoveReplicasOffVolumes(moveReplicasOffVolumes)`](#fn-specwithmovereplicasoffvolumes)
  * [`fn withMoveReplicasOffVolumesMixin(moveReplicasOffVolumes)`](#fn-specwithmovereplicasoffvolumesmixin)
  * [`fn withRebalanceDisk(rebalanceDisk)`](#fn-specwithrebalancedisk)
  * [`fn withReplicaMovementStrategies(replicaMovementStrategies)`](#fn-specwithreplicamovementstrategies)
  * [`fn withReplicaMovementStrategiesMixin(replicaMovementStrategies)`](#fn-specwithreplicamovementstrategiesmixin)
  * [`fn withReplicationThrottle(replicationThrottle)`](#fn-specwithreplicationthrottle)
  * [`fn withSkipHardGoalCheck(skipHardGoalCheck)`](#fn-specwithskiphardgoalcheck)
  * [`obj spec.moveReplicasOffVolumes`](#obj-specmovereplicasoffvolumes)
    * [`fn withBrokerId(brokerId)`](#fn-specmovereplicasoffvolumeswithbrokerid)
    * [`fn withVolumeIds(volumeIds)`](#fn-specmovereplicasoffvolumeswithvolumeids)
    * [`fn withVolumeIdsMixin(volumeIds)`](#fn-specmovereplicasoffvolumeswithvolumeidsmixin)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of KafkaRebalance

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"The specification of the Kafka rebalance."

### fn spec.withBrokers

```ts
withBrokers(brokers)
```

"The list of newly added brokers in case of scaling up or the ones to be removed in case of scaling down to use for rebalancing. This list can be used only with rebalancing mode `add-brokers` and `removed-brokers`. It is ignored with `full` mode."

### fn spec.withBrokersMixin

```ts
withBrokersMixin(brokers)
```

"The list of newly added brokers in case of scaling up or the ones to be removed in case of scaling down to use for rebalancing. This list can be used only with rebalancing mode `add-brokers` and `removed-brokers`. It is ignored with `full` mode."

**Note:** This function appends passed data to existing values

### fn spec.withConcurrentIntraBrokerPartitionMovements

```ts
withConcurrentIntraBrokerPartitionMovements(concurrentIntraBrokerPartitionMovements)
```

"The upper bound of ongoing partition replica movements between disks within each broker. Default is 2."

### fn spec.withConcurrentLeaderMovements

```ts
withConcurrentLeaderMovements(concurrentLeaderMovements)
```

"The upper bound of ongoing partition leadership movements. Default is 1000."

### fn spec.withConcurrentPartitionMovementsPerBroker

```ts
withConcurrentPartitionMovementsPerBroker(concurrentPartitionMovementsPerBroker)
```

"The upper bound of ongoing partition replica movements going into/out of each broker. Default is 5."

### fn spec.withExcludedTopics

```ts
withExcludedTopics(excludedTopics)
```

"A regular expression where any matching topics will be excluded from the calculation of optimization proposals. This expression will be parsed by the java.util.regex.Pattern class; for more information on the supported format consult the documentation for that class."

### fn spec.withGoals

```ts
withGoals(goals)
```

"A list of goals, ordered by decreasing priority, to use for generating and executing the rebalance proposal. The supported goals are available at https://github.com/linkedin/cruise-control#goals. If an empty goals list is provided, the goals declared in the default.goals Cruise Control configuration parameter are used."

### fn spec.withGoalsMixin

```ts
withGoalsMixin(goals)
```

"A list of goals, ordered by decreasing priority, to use for generating and executing the rebalance proposal. The supported goals are available at https://github.com/linkedin/cruise-control#goals. If an empty goals list is provided, the goals declared in the default.goals Cruise Control configuration parameter are used."

**Note:** This function appends passed data to existing values

### fn spec.withMode

```ts
withMode(mode)
```

"Mode to run the rebalancing. The supported modes are `full`, `add-brokers`, `remove-brokers`.\nIf not specified, the `full` mode is used by default. \n\n* `full` mode runs the rebalancing across all the brokers in the cluster.\n* `add-brokers` mode can be used after scaling up the cluster to move some replicas to the newly added brokers.\n* `remove-brokers` mode can be used before scaling down the cluster to move replicas out of the brokers to be removed.\n* `remove-disks` mode can be used to move data across the volumes within the same broker\n."

### fn spec.withMoveReplicasOffVolumes

```ts
withMoveReplicasOffVolumes(moveReplicasOffVolumes)
```

"List of brokers and their corresponding volumes from which replicas need to be moved."

### fn spec.withMoveReplicasOffVolumesMixin

```ts
withMoveReplicasOffVolumesMixin(moveReplicasOffVolumes)
```

"List of brokers and their corresponding volumes from which replicas need to be moved."

**Note:** This function appends passed data to existing values

### fn spec.withRebalanceDisk

```ts
withRebalanceDisk(rebalanceDisk)
```

"Enables intra-broker disk balancing, which balances disk space utilization between disks on the same broker. Only applies to Kafka deployments that use JBOD storage with multiple disks. When enabled, inter-broker balancing is disabled. Default is false."

### fn spec.withReplicaMovementStrategies

```ts
withReplicaMovementStrategies(replicaMovementStrategies)
```

"A list of strategy class names used to determine the execution order for the replica movements in the generated optimization proposal. By default BaseReplicaMovementStrategy is used, which will execute the replica movements in the order that they were generated."

### fn spec.withReplicaMovementStrategiesMixin

```ts
withReplicaMovementStrategiesMixin(replicaMovementStrategies)
```

"A list of strategy class names used to determine the execution order for the replica movements in the generated optimization proposal. By default BaseReplicaMovementStrategy is used, which will execute the replica movements in the order that they were generated."

**Note:** This function appends passed data to existing values

### fn spec.withReplicationThrottle

```ts
withReplicationThrottle(replicationThrottle)
```

"The upper bound, in bytes per second, on the bandwidth used to move replicas. There is no limit by default."

### fn spec.withSkipHardGoalCheck

```ts
withSkipHardGoalCheck(skipHardGoalCheck)
```

"Whether to allow the hard goals specified in the Kafka CR to be skipped in optimization proposal generation. This can be useful when some of those hard goals are preventing a balance solution being found. Default is false."

## obj spec.moveReplicasOffVolumes

"List of brokers and their corresponding volumes from which replicas need to be moved."

### fn spec.moveReplicasOffVolumes.withBrokerId

```ts
withBrokerId(brokerId)
```

"ID of the broker that contains the disk from which you want to move the partition replicas."

### fn spec.moveReplicasOffVolumes.withVolumeIds

```ts
withVolumeIds(volumeIds)
```

"IDs of the disks from which the partition replicas need to be moved."

### fn spec.moveReplicasOffVolumes.withVolumeIdsMixin

```ts
withVolumeIdsMixin(volumeIds)
```

"IDs of the disks from which the partition replicas need to be moved."

**Note:** This function appends passed data to existing values